--- a/.github/workflows/solar.yml
+++ b/.github/workflows/solar.yml
@@ -2,7 +2,7 @@ name: solar
 on:
   workflow_dispatch:
 env:
-  MONGO_URI: "mongodb+srv://cluster0.gdmobq1.mongodb.net/"
+  MONGO_URI: "mongodb+srv://amu:${{ secrets.ATLAS_PASS }}@cluster0.gdmobq1.mongodb.net/"
   MONGO_USERNAME: amu
   MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
   ATLSE_API_KEY: ${{ secrets.ATLAS_TOKEN }}
