--- a/.github/workflows/solar.yml
+++ b/.github/workflows/solar.yml
@@ -5,7 +5,7 @@ env:
   MONGO_URI: "mongodb+srv://amu:${{ secrets.ATLAS_PASS }}@cluster0.gdmobq1.mongodb.net/"
   MONGO_USERNAME: amu
   MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
-  ATLSE_API_KEY: ${{ secrets.ATLAS_TOKEN }}
+  ATLAS_API_KEY: ${{ secrets.ATLAS_TOKEN }}
 jobs:
   build:
     runs-on: ubuntu-latest
