--- a/.github/workflows/solar.yml
+++ b/.github/workflows/solar.yml
@@ -2,7 +2,7 @@ name: solar
 on:
   workflow_dispatch:
 env:
-  MONGO_URI: "mongodb+srv://amu:${{ secrets.ATLAS_PASS }}@cluster0.gdmobq1.mongodb.net/"
+  MONGO_URI: "mongodb+srv://amu:${{ secrets.ATLAS_PASS }}@cluster0.gdmobq1.mongodb.net/planets?retryWrites=true&w=majority"
   MONGO_USERNAME: amu
   MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
   ATLAS_API_KEY: ${{ secrets.ATLAS_TOKEN }}
@@ -19,7 +19,7 @@ jobs:
       - name: install dependencies
         run: |
          npm install
-         echo $MONGO_URI
+         
          
         
       - name: test
